[PAK-5887] Fix warning symbol layout issues

--- a/src/scss/warningImages.scss
+++ b/src/scss/warningImages.scss
@@ -181,7 +181,6 @@ div.symbol-image {
 span.symbol-text {
   display: table-cell;
   vertical-align: middle;
-  line-height: $current-warning-image-height;
   width: 100%;
   text-align: center;
   margin: 0 auto;
